src/components/section_components/mainpage/style/product.css
.product-card {
  background: rgba(11, 59, 54, 0.95);
  border-radius: 16px;
  border: 3px solid #1e5a52;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
  height: 100%;
}

.image-wrapper {
  position: relative;
  width: 100%;
  height: 140px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.product-image {
  position: absolute;
  object-fit: contain;
  z-index: 1; /* Keep it low */
  pointer-events: none; /* Let clicks pass through to content behind/below it */

  filter: drop-shadow(15px 14px 4px rgba(0, 0, 0, 0.25));
}

.product-image.single {
  position: relative;
  top: -30px;
}

.product-image.main {
  height: 230px;
  left: 20px;
  top: -50px;
  transform: translateX(-15px);
  z-index: 2;
}

.product-image.second {
  opacity: 0.9;
}

.product-card-rare img {
  width: 95px;
  top: -15px !important;
}

@media (min-width: 768px) {
  .product-card-rare img {
    width: 130px;
  }
}

.hover-premium-btn {
  position: relative;
  z-index: 100;
  transition: all 0.3s ease;
}

.hover-premium-btn:hover {
  transform: scale(1.05);
  background-color: #d4aa6abd !important;
  color: white !important;
}

.card-link {
  cursor: pointer;
  transition: all 0.3s ease;
  display: flex;
  align-items: center;
  gap: 8px;
}

.card-link:hover {
  color: #1B4332;
}

.animate-link-arrow span {
  transition: transform 0.3s ease;
}

.animate-link-arrow:hover span {
  transform: translateX(5px);
}

